update username in links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="./docs/getting-started.html" class="nav-item">Getting Started</a>
         <a href="./api/configuration.html" class="nav-item">API</a>
         <a href="./docs/examples.html" class="nav-item">Examples</a>
-        <a href="https://github.com/KingPixil/moon" class="nav-item">Github</a>
+        <a href="https://github.com/kbrsh/moon" class="nav-item">Github</a>
       </div>
       <section id="hero" class="center">
         <div class="container">
