--- a/examples/markdown/index.html
+++ b/examples/markdown/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Moon Examples | Markdown">
+    <meta name="author" content="Kabir Shah">
+
     <title>Moon | Markdown</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <div id="app" m-mask>
@@ -12,6 +18,6 @@
     </div>
     <script src="../../dist/moon.js"></script>
     <script src="https://unpkg.com/marked@0.3.6/marked.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
   </body>
 </html>
