--- a/examples/todomvc/index.html
+++ b/examples/todomvc/index.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Moon Examples | TodoMVC">
+    <meta name="author" content="Kabir Shah">
+
     <title>Moon | Todo MVC</title>
+
     <link rel="stylesheet" href="https://unpkg.com/todomvc-app-css@2.0.6/index.css">
     <style>
       [m-mask] {
