new favicon + upload fonts correctly

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     <title>Moon</title>
 
-    <link rel='shortcut icon' href='./img/logo.png'/>
+    <link rel="shortcut icon" href="./img/favicon.png"/>
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link href="./fonts/fonts.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/lib/wing.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
@@ -63,7 +64,7 @@
 
             <div class="col-4">
               <h3 class="subhead text-center">Intuitive</h3>
-              <p>Moon's simple API makes it easy to learn, you can get going in no time, just include the script!</p>
+              <p>Moon's simple API makes it easy to learn, you can get going in no time, just include a script.</p>
             </div>
           </div>
         </div>
