--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link href="./fonts/fonts.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/lib/wing.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
@@ -38,14 +38,12 @@
         <a href="./docs/examples.html" class="nav-item">Examples</a>
         <a href="https://github.com/kbrsh/moon" class="nav-item">Github</a>
       </div>
-      <section id="hero" class="center">
+      <section id="hero">
         <div class="container">
-          <div class="inner">
-            <img src="./img/logo.png" id="logo"/>
-            <h1 class="head">Moon</h1>
-            <h3>A minimal, blazing fast user interface library.</h3>
-            <a class="cta" href="./docs/installation.html">Get Started</a>
-          </div>
+          <img src="./img/logo.png" id="logo"/>
+          <h1 class="head">Moon</h1>
+          <h3>A minimal, blazing fast user interface library.</h3>
+          <a class="cta" href="./docs/installation.html">Get Started</a>
         </div>
       </section>
 
