--- a/test/test.html
+++ b/test/test.html
@@ -34,7 +34,7 @@
   <script src="core/directives/else.js"></script>
   <script src="core/directives/literal.js"></script>
   <script src="core/directives/mask.js"></script>
-  <script src="core/directives/model.js"></script>
+  <script src="core/directives/bind.js"></script>
   <script src="core/directives/on.js"></script>
   <script src="core/directives/show.js"></script>
   <script src="core/plugin/plugin.js"></script>
