--- a/examples/firebase-simple/index.html
+++ b/examples/firebase-simple/index.html
@@ -9,15 +9,16 @@
 
   <title>Moon | Firebase Simple</title>
 
-  <link href="../../../../css/lib/wing.min.css" rel="stylesheet" />
+  <link href="../../../css/lib/wing.min.css" rel="stylesheet" />
   <link href="./styles.css" rel="stylesheet" />
 </head>
 <body>
 
   <div id="app"></div>
 
-  <script src="../../../dist/moon.js"></script>
+  <script src="../../dist/moon.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
   <script src="scripts.js"></script>
+  
 </body>
 </html>
