--- a/examples/firebase-chat/index.html
+++ b/examples/firebase-chat/index.html
@@ -5,20 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Moon Examples | Firebase Simple">
-  <meta name="author" content="Kabir Shah & Linus">
+  <meta name="author" content="Kabir Shah &amp; Linus">
 
   <title>Moon | Firebase Simple</title>
 
-  <link href="../../../css/lib/wing.min.css" rel="stylesheet" />
+  <link href="../../css/lib/wing.min.css" rel="stylesheet" />
   <link href="./styles.css" rel="stylesheet" />
 </head>
 <body>
 
-  <div id="app"></div>
+  <div id="app">
+    <div class="container">
+      <ul>
+        <li m-for="message in messages">{{message}}</li>
+      </ul>
+      <div class="bottom center">
+        <input type="text" placeholder="Message" m-model="newMessage" m-on:keyup.enter="addMessage"/>
+        <button m-on:click="addMessage">Add</button>
+      </div>
+    </div>
+  </div>
 
   <script src="../../dist/moon.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
   <script src="scripts.js"></script>
-  
+
 </body>
 </html>
