--- a/examples/firebase-chat/index.html
+++ b/examples/firebase-chat/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Moon Examples | Firebase Simple">
+  <meta name="description" content="Moon Examples | Firebase Chat">
   <meta name="author" content="Kabir Shah &amp; Linus">
 
-  <title>Moon | Firebase Simple</title>
+  <title>Moon | Firebase Chat</title>
 
   <link href="../../css/lib/wing.min.css" rel="stylesheet" />
   <link href="./styles.css" rel="stylesheet" />
