mask chat example

--- a/examples/firebase-chat/index.html
+++ b/examples/firebase-chat/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div id="app">
+  <div id="app" m-mask>
     <div class="container">
       <ul>
         <li m-for="message in messages">{{message}}</li>
