--- a/benchmarks/loop/index.html
+++ b/benchmarks/loop/index.html
@@ -3,21 +3,39 @@
   <head>
     <meta name="description" content="Loop | Moon" />
     <title>Loop | Moon</title>
-    <link href="https://cdn.rawgit.com/KingPixil/wing/master/dist/wing.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.rawgit.com/kbrsh/wing/master/dist/wing.min.css" rel="stylesheet" type="text/css" />
+    <style>
+      .container {
+        margin-top: 50px;
+      }
+
+      button {
+        margin-right: 10px;
+      }
+
+      button:last-of-type {
+        margin-right: 0;
+      }
+
+      ul {
+        margin-top: 20px;
+      }
+    </style>
   </head>
-  <body class="container text-center">
-    <h1 style="font-weight:200;">Loop</h1>
-    <p>Check the console</p>
-    <div id="app">
-      <button m-on:click="add">Add 1000</button>
-      <button m-on:click="addLot">Add 10000</button>
-      <button m-on:click="reverse">Reverse</button>
-      <button m-on:click="swap">Swap</button>
-      <button m-on:click="remove">Remove</button>
-      <button m-on:click="clear">Clear</button>
-      <ul>
-        <li m-for="item in items">{{item}}</li>
-      </ul>
+  <body>
+    <div class="container">
+      <h1>Loop</h1>
+      <div id="app">
+        <button m-on:click="add">Add 1000</button>
+        <button m-on:click="addLot">Add 10000</button>
+        <button m-on:click="reverse">Reverse</button>
+        <button m-on:click="swap">Swap</button>
+        <button m-on:click="remove">Remove</button>
+        <button m-on:click="clear">Clear</button>
+        <ul>
+          <li m-for="item in items">{{item}}</li>
+        </ul>
+      </div>
     </div>
     <script src="../../dist/moon.js"></script>
     <script src="./scripts.js"></script>
