add virtual DOM hoisting tests

--- a/test/test.html
+++ b/test/test.html
@@ -25,6 +25,7 @@
   <script src="core/instance/mount.js"></script>
   <script src="core/instance/render.js"></script>
   <script src="core/instance/template.js"></script>
+  <script src="core/instance/vdom.js"></script>
   <script src="core/compiler/compiler.js"></script>
   <script src="core/compiler/optimizer.js"></script>
   <script src="core/directives/custom.js"></script>
