feat: static flags & m-dom directive - Compiler   - `m` is now a global variable   - Lexer     - `attributes` is an array   - Parser     - Every node has `data` with no flags   - Generator     - `generateNodeState`       - Compiles text values       - Compiles inserts       - Compiles attributes       - Compiles directives       - Compiles before + during special directives       - Creates a list of after special directives       - Compiles child states and adds static flags     - `generateNode`       - Converts compiled nodes into function calls       - Calls special directives after       - Returns static node if static flag is present     - `generate`       - Marks tree as static if state is static       - Uses `generateNodeState` and `generateNode` - Directives   - `m-if`/`m-else`     - Only generates output for `m-else`     - Outer if/else nodes are _always_ dynamic   - `m-for`     - _Always_ dynamic     - Allows `generateNodeState` to restore locals   - `m-on` + `m-bind`     - Uses new naming conventions   - `m-dom`     - Adds dom property     - Replacement for `m-literal:prop.dom="value"`   - `m-literal`     - Only for literal attributes - Virtual DOM   - HyperMoon for text nodes requires     - type -> type of node ("#text")     - data -> data of node (only flags)     - value -> value of node (text content)

--- a/test/test.html
+++ b/test/test.html
@@ -29,6 +29,7 @@
   <script src="core/compiler/compiler.js"></script>
   <script src="core/compiler/optimizer.js"></script>
   <script src="core/directives/custom.js"></script>
+  <script src="core/directives/dom.js"></script>
   <script src="core/directives/for.js"></script>
   <script src="core/directives/html.js"></script>
   <script src="core/directives/if.js"></script>
