--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A minimal & fast UI library.">
+    <meta name="description" content="The minimal & fast UI library.">
     <meta name="author" content="Kabir Shah">
 
     <title>Moon</title>
@@ -27,8 +27,9 @@
 
   <body>
     <section id="head" class="flex size-full align-center">
-      <div class="container-small">
-        <h1>A minimal & fast user interface library.</h1>
+      <div class="container-small text-center">
+        <img src="./img/logo.png" alt="Moon Logo">
+        <h1>The minimal & fast user interface library</h1>
         <a href="./guide/getting-started.html"><button>GET STARTED</button></a>
         <a href="./guide/about.html"><button>ABOUT</button></a>
       </div>
