update example style

--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,7 @@
 });</code></pre>
 				</div>
 				<div class="col">
-					<div id="example"></div>
+					<div id="example" class="flex center"></div>
 				</div>
 			</div>
 		</section>
