--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,17 @@
 	</head>
 
 	<body>
+		<div id="nav" class="container position-absolute flex align-center">
+			<h2 id="nav-home"><a href="./">Moon</a></h2>
+
+			<div id="nav-items">
+				<a href="./doc/guide">Guide</a>
+				<a href="./doc/about">About</a>
+				<a href="./doc/examples">Examples</a>
+				<a href="https://github.com/kbrsh/moon">GitHub</a>
+			</div>
+		</div>
+
 		<section id="head" class="flex size-full align-center">
 			<div class="container-small text-center">
 				<img src="./img/logo.png" alt="Moon Logo">
