update fast example

--- a/web/index.html
+++ b/web/index.html
@@ -70,12 +70,12 @@
 				<div class="col">
 					<pre><code lang="mvl"><span class="red">&lt;p</span><span class="red">&gt;</span>Count: { count }<span class="red">&lt;/p</span><span class="red">&gt;</span>
 <span class="red">&lt;button</span> <span class="orange">@click</span>={ <span class="blue">increment</span>() }<span class="red">&gt;</span>
-   Increment
+	Increment
 <span class="red">&lt;/button</span><span class="red">&gt;</span></code></pre>
 				</div>
 				<div class="col">
 					<pre><code lang="js"><span class="purple">function</span> <span class="blue">update</span>() {
-   <span class="orange">this</span>.m.<span class="blue">stc</span>(m[<span class="orange">4</span>], <span class="orange">this</span>.data.count);
+	m.<span class="blue">stc</span>(m[<span class="orange">3</span>], data.count);
 }</code></pre>
 				</div>
 			</div>
