update cta links

--- a/web/index.html
+++ b/web/index.html
@@ -30,9 +30,9 @@
 			<h2 id="nav-home"><a href="./">Moon</a></h2>
 
 			<div id="nav-items">
-				<a href="./doc/guide">Guide</a>
-				<a href="./doc/about">About</a>
-				<a href="./doc/examples">Examples</a>
+				<a href="./doc/guide.html">Guide</a>
+				<a href="./doc/about.html">About</a>
+				<a href="./doc/examples.html">Examples</a>
 				<a href="https://github.com/kbrsh/moon">GitHub</a>
 			</div>
 		</div>
@@ -41,8 +41,8 @@
 			<div class="container-small text-center">
 				<img src="./img/logo.png" alt="Moon Logo">
 				<h1>The minimal & fast user interface library</h1>
-				<a href="./guide/getting-started.html"><button>GET STARTED</button></a>
-				<a href="./guide/about.html"><button>ABOUT</button></a>
+				<a href="./doc/guide.html"><button>GET STARTED</button></a>
+				<a href="./doc/about.html"><button>ABOUT</button></a>
 			</div>
 		</section>
 
