update fast compiled result

--- a/web/index.html
+++ b/web/index.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="col">
 					<pre><code lang="js"><span class="purple">function</span> <span class="blue">update</span>() {
-	m.<span class="blue">stc</span>(m[<span class="orange">3</span>], data.count);
+	m.<span class="blue">stc</span>(m[<span class="orange">3</span>], instance.count);
 }</code></pre>
 				</div>
 			</div>
