--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 		</section>
-		<script src="../dist/moon.min.js"></script>
+		<script src="./js/lib/moon.min.js"></script>
 		<script src="./js/index.js"></script>
 	</body>
 </html>
