--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -36,7 +36,7 @@
 		</script>
 
 
-		<script src="../../../dist/moon.min.js"></script>
+		<script src="../../js/lib/moon.min.js"></script>
 		<script>
 			Moon({
 				root: "#root",
