make head mobile friendly

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 
 		<section id="head" class="container text-center">
-			<div class="container-small text-center">
+			<div class="text-center">
 				<img src="./img/logo.png" alt="Moon Logo">
 				<h1>The minimal & fast user interface library</h1>
 				<a href="./doc/guide.html"><button>GET STARTED</button></a>
