--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
 				<div class="nav-items">
 					<p>
-						<a href="./doc/guide.html">Guide</a>
-						<a href="./doc/about.html">About</a>
-						<a href="./doc/examples.html">Examples</a>
-						<a href="https://github.com/kbrsh/moon">GitHub</a>
+						<a href="./doc/guide.html" class="s-1">Guide</a>
+						<a href="./doc/about.html" class="s-1">About</a>
+						<a href="./doc/examples.html" class="s-1">Examples</a>
+						<a href="https://github.com/kbrsh/moon" class="s-1">GitHub</a>
 					</p>
 				</div>
 			</div>
