--- a/index.html
+++ b/index.html
@@ -26,54 +26,26 @@
 	</head>
 
 	<body>
-		<div class="container x-9">
+		<div class="container">
 			<div class="nav">
 				<div class="nav-home">
 					<h2 class="nav-home"><a href="./">Moon</a></h2>
 				</div>
 
 				<div class="nav-items">
-					<p>
-						<a href="./doc/guide.html" class="s-1">Guide</a>
-						<a href="./doc/about.html" class="s-1">About</a>
-						<a href="./doc/examples.html" class="s-1">Examples</a>
-						<a href="https://github.com/kbrsh/moon" class="s-1">GitHub</a>
-					</p>
+					<a href="./doc/guide.html">Guide</a>
+					<a href="./doc/about.html">About</a>
+					<a href="./doc/examples.html">Examples</a>
+					<a href="https://github.com/kbrsh/moon">GitHub</a>
 				</div>
 			</div>
 
-			<section id="head" class="x-8 s-3">
-				<img src="./img/logo.png" alt="Moon Logo" class="x-6"/>
+			<div class="head">
+				<img src="./img/logo.png" alt="Moon Logo"/>
 				<h1>The minimal & fast user interface library</h1>
-				<a href="./doc/guide.html"><button class="x-6">GET STARTED</button></a>
-				<a href="./doc/about.html"><button class="x-6">ABOUT</button></a>
-			</section>
-
-			<section id="feature-minimal" class="feature s-3">
-				<h3>MINIMAL</h3>
-				<p>Moon instances are composed of data and a view to display the data. Actions performed through the view update the data along with the view. The view is defined with the Moon view language — a minimalistic template language allowing powerful interpolation and logic. The data is defined with a JavaScript object containing values of any type.</p>
-				<div class="example-container">
-					<div class="code x-8">
-						<pre><code lang="mvl"><span class="red">&lt;p</span><span class="red">&gt;</span>{text}<span class="red">&lt;/p</span><span class="red">&gt;</span>
-<span class="red">&lt;input</span> <span class="orange">type</span>=<span class="green">&quot;text&quot;</span> <span class="orange">@bind</span>={text} <span class="red">/&gt;</span></code></pre>
-						<pre><code lang="js"><span class="blue">Moon</span>({
-	root: <span class="green">&quot;#root&quot;</span>,
-	text: <span class="green">&quot;Hello Moon!&quot;</span>
-});</code></pre>
-					</div>
-					<div id="example"></div>
-				</div>
-			</section>
-
-			<section id="feature-fast" class="feature s-3">
-				<h3>FAST</h3>
-				<p>Moon instances are compiled from the Moon view language to lower level JavaScript DOM operations. Moon generates code to first create and initialize your application. At compile-time, Moon can identify the dynamic parts of your application and generate code to update them when needed at runtime.</p>
-				<pre><code lang="mvl"><span class="red">&lt;p</span><span class="red">&gt;</span>Static content.<span class="red">&lt;/p</span><span class="red">&gt;</span>
-<span class="red">&lt;p</span><span class="red">&gt;</span>Dynamic content: {dynamic}<span class="red">&lt;/p</span><span class="red">&gt;</span></code></pre>
-				<pre><code lang="js"><span class="purple">function</span> <span class="blue">update</span>() {
-	m.<span class="blue">stc</span>(m6, instance.dynamic);
-}</code></pre>
-			</section>
+				<a href="./doc/guide.html"><button>GET STARTED</button></a>
+				<a href="./doc/about.html"><button>ABOUT</button></a>
+			</div>
 		</div>
 		<script src="./js/lib/moon.min.js"></script>
 		<script src="./js/index.js"></script>
