--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 			<div class="head">
 				<img src="./img/logo.png" alt="Moon Logo"/>
-				<h1>The minimal & fast user interface library</h1>
+				<h1>The minimal & fast library for functional user interfaces</h1>
 				<a href="./doc/guide.html"><button>GET STARTED</button></a>
 				<a href="./doc/about.html"><button>ABOUT</button></a>
 			</div>
