use absolute paths

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 		<div class="container">
 			<div class="nav">
 				<div class="nav-home">
-					<h2 class="nav-home"><a href="./">Moon</a></h2>
+					<h2 class="nav-home"><a href="/">Moon</a></h2>
 				</div>
 
 				<div class="nav-items">
-					<a href="./doc/guide.html">Guide</a>
-					<a href="./doc/about.html">About</a>
-					<a href="./doc/examples.html">Examples</a>
+					<a href="/doc/guide.html">Guide</a>
+					<a href="/play/index.html">Playground</a>
+					<a href="/doc/examples.html">Examples</a>
 					<a href="https://github.com/kbrsh/moon">GitHub</a>
 				</div>
 			</div>
@@ -44,7 +44,7 @@
 				<img src="./img/logo.png" alt="Moon Logo"/>
 				<h1>The minimal & fast library for functional user interfaces</h1>
 				<a href="./doc/guide.html"><button>GET STARTED</button></a>
-				<a href="./doc/about.html"><button>ABOUT</button></a>
+				<a href="./doc/about.html"><button>PLAYGROUND</button></a>
 			</div>
 		</div>
 		<script src="./js/lib/moon.min.js"></script>
