--- a/play/index.html
+++ b/play/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/lib/grain.css" />
 		<link rel="stylesheet" type="text/css" href="../css/styles.css" />
 		<link rel="stylesheet" type="text/css" href="./css/index.css" />
+		<link rel="stylesheet" type="text/css" href="./css/lib/codemirror.css" />
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
