--- a/play/index.html
+++ b/play/index.html
@@ -35,23 +35,27 @@
 
 				<div class="nav-items">
 					<a href="/doc/guide.html">Guide</a>
-					<a href="/doc/about.html">About</a>
+					<a href="/play/index.html">Playground</a>
 					<a href="/doc/examples.html">Examples</a>
 					<a href="https://github.com/kbrsh/moon">GitHub</a>
 				</div>
 			</div>
 
-			<div class="editor">
-				<div id="editor-mvl"></div>
-				<div id="editor-javascript"></div>
-			</div>
+			<div class="playground">
+				<div class="editor">
+					<div id="editor-mvl"></div>
+					<div id="editor-javascript"></div>
+				</div>
 
-			<div id="result"></div>
+				<div id="result"></div>
+			</div>
 		</div>
 
 		<script src="./js/lib/codemirror.js"></script>
-		<script src="./js/lib/htmlmixed.js"></script>
+		<script src="./js/lib/xml.js"></script>
+		<script src="./js/lib/css.js"></script>
 		<script src="./js/lib/javascript.js"></script>
+		<script src="./js/lib/htmlmixed.js"></script>
 		<script src="./js/lib/moon.js"></script>
 		<script>
 			// Store Moon MVL.
