working moon preview

--- a/play/index.html
+++ b/play/index.html
@@ -42,12 +42,8 @@
 			</div>
 
 			<div class="playground">
-				<div class="editor">
-					<div id="editor-mvl"></div>
-					<div id="editor-javascript"></div>
-				</div>
-
-				<div id="result"></div>
+				<div id="editor"></div>
+				<iframe id="result"></iframe>
 			</div>
 		</div>
 
