init new playground

--- a/play/index.html
+++ b/play/index.html
@@ -49,16 +49,9 @@
 
 		<script src="./js/lib/codemirror.js"></script>
 		<script src="./js/lib/xml.js"></script>
-		<script src="./js/lib/css.js"></script>
 		<script src="./js/lib/javascript.js"></script>
-		<script src="./js/lib/htmlmixed.js"></script>
+		<script src="./js/lib/moon-compiler.js"></script>
 		<script src="./js/lib/moon.js"></script>
-		<script>
-			// Store Moon MVL.
-			var module = {};
-			var require = function() { return Moon; };
-		</script>
-		<script src="./js/lib/moon-mvl.min.js"></script>
 		<script src="./js/index.js"></script>
 	</body>
 </html>
