remove index.html from URL

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 				<div class="nav-items">
 					<a href="/doc/guide.html">Guide</a>
-					<a href="/play/index.html">Playground</a>
+					<a href="/play">Playground</a>
 					<a href="/doc/examples.html">Examples</a>
 					<a href="https://github.com/kbrsh/moon">GitHub</a>
 				</div>
