--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 				<a href="./doc/guide.html"><button>GET STARTED</button></a>
 				<a href="./doc/about.html"><button>PLAYGROUND</button></a>
 			</div>
+
+			<div class="idea">
+				<p>Applications today are complex, built on top of frameworks that create arbitrary abstractions fundamentally based on mutability and imperative code.</p>
+				<p>They introduce concepts like reactivity or local state or algebraic effects, all in attempt to represent views as a function of state.</p>
+				<p>In reality, applications are much more sophisticated and require third-party libraries for any effects other than updating a view.</p>
+				<p>Moon is a novel approach to web applications based on pure functions. An application is a function that uses <b>drivers</b>, programs that provide an interface to the real world.</p>
+				<p>Any application is defined as a function that takes input from drivers and returns output to drivers. These drivers can be responsible for things like views, state, audio, HTTP requests, routing, and timing events.</p>
+				<p>Applications run on the Moon, and drivers update the Earth.</p>
+			</div>
 		</div>
 		<script src="./js/lib/moon.min.js"></script>
 		<script src="./js/index.js"></script>
