--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@ Moon.<span class="blue">run</span>(({ data, view }) =&gt; ({
 </code></pre>
 				</div>
 			</div>
+
+			<div class="feature">
+				<div class="feature-info">
+					<h2 class="feature-info-title">Tiny & Fast</h2>
+					<p>Modern web frameworks often add a lot of weight to JavaScript bundles, resulting in slower web applications and load times. This effect is especially visible when using a slow internet connection.</p>
+					<p>Since Moon is so simple at its core, where it creates an abstraction to allow drivers to handle input and output, it <b>only weighs 1kb</b> minified and gzipped. On top of that, it is specifically optimized for JavaScript engines to perform fast virtual DOM diffing and DOM operations.</p>
+				</div>
+			</div>
 		</div>
 		<script src="./js/lib/moon.min.js"></script>
 		<script src="./js/index.js"></script>
