add both graphs to size&speed section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ Moon.<span class="blue">run</span>(({ data, view }) =&gt; ({
 				</div>
 				<div class="feature-media">
 					<img class="feature-media-image" src="/img/size.png" alt="Sizes of popular frameworks relative to Moon."/>
+					<a class="feature-media-linkImage" href="https://github.com/krausest/js-framework-benchmark"><img class="feature-media-image" src="/img/speed.png" alt="Performance of popular frameworks relative to Moon."/></a>
 				</div>
 			</div>
 		</div>
