add closing call to action

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 			<div class="head">
 				<img src="./img/logo.png" alt="Moon Logo"/>
 				<h1>The minimal & fast library for functional user interfaces</h1>
-				<a href="./doc/guide.html"><button>GET STARTED</button></a>
-				<a href="./doc/about.html"><button>PLAYGROUND</button></a>
+				<a class="linkPlain" href="/doc/guide.html"><button class="buttonPrimary">GET STARTED</button></a>
+				<a class="linkPlain" href="/play"><button class="buttonSecondary">PLAYGROUND</button></a>
 			</div>
 
 			<div class="idea">
@@ -97,7 +97,7 @@ Moon.<span class="blue">run</span>(({ data, view }) =&gt; ({
 				</div>
 				<div class="feature-media">
 					<img class="feature-media-image" src="/img/size.png" alt="Sizes of popular frameworks relative to Moon."/>
-					<a class="feature-media-linkImage" href="https://github.com/krausest/js-framework-benchmark"><img class="feature-media-image" src="/img/speed.png" alt="Performance of popular frameworks relative to Moon."/></a>
+					<a class="linkPlain" href="https://github.com/krausest/js-framework-benchmark"><img class="feature-media-image" src="/img/speed.png" alt="Performance of popular frameworks relative to Moon."/></a>
 				</div>
 			</div>
 
@@ -138,6 +138,12 @@ Moon.<span class="blue">run</span>(({ data, view }) =&gt; ({
 </code></pre>
 				</div>
 			</div>
+		</div>
+
+		<div class="jump">
+			<h2 class="jump-title">Jump into the guide to get started.</h2>
+			<a class="linkPlain" href="/doc/guide.html"><button class="buttonPrimary">GET STARTED</button></a>
+			<a class="linkPlain" href="/play"><button class="buttonSecondary">PLAYGROUND</button></a>
 		</div>
 		<script src="./js/lib/moon.min.js"></script>
 		<script src="./js/index.js"></script>
